# sdk-python

./: .codecov.yml  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .prettierrc  AGENTS.md  COMPATIBILITY.MD  CONTRIBUTING.md  LICENSE.MIT  README.md  SECURITY.md  SNAPSHOT.md  create-namespaced-tags.sh  docs  m-api-br.md  package-lock.json  package.json  prepare-monorepo.sh  pyproject.toml
.agents/references/: code-verification.md  mdx-authoring.md  terminology.md  voice-guide.md
.agents/skills/: README.md
.artifact/: write_operations.jsonl
.claude/: references
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  content_addition.yml  documentation_improvement.yml  documentation_question.yml  feature_request.yml  technical_correction.yml
.github/actions/: README.md
.github/agent-sops/: task-release-notes.sop.md
.github/labelers/: area.yml  language.yml  type.yml
.github/scripts/: upload-integ-test-metrics.py
.github/workflows/: LAMDBA_LAYERS_SOP.md  api-review-label.yml  auto-close.yml  auto-strands-review.yml  check-markdown-links.yml  ci.yml  docs-auto-strands-review.yml  docs-ci.yml  docs-deploy-github-pages.yml  docs-deploy-preview.yml  docs-strands-command.yml  integration-test.yml  issue-labeler.yml  issue-responder.yml  pr-and-push.yml  pr-size-labeler.yml  pr-title.yml  publish-lambda-layer.yml  py-check.yml  pypi-publish-on-release.yml  python-auto-close.yml  python-auto-strands-review.yml  python-check-markdown-links.yml  python-integration-test.yml  python-issue-responder.yml  python-pr-and-push.yml  python-pr-size-labeler.yml  python-pr-title.yml  python-publish-lambda-layer.yml  python-pypi-publish-on-release.yml  python-strands-command.yml  python-test-lint.yml  python-wasm-pypi-publish-on-release.yml  strands-command.yml  test-lint.yml  typescript-integration-test.yml  typescript-npm-publish-on-release.yml  typescript-pr-and-push.yml  typescript-security-audit.yml  typescript-test-package-pack.yml  (+3 more)
.github_temp/PULL_REQUEST_TEMPLATE/: README.md  default.md  feature.md  quick-fix.md
.husky/: pre-commit
designs/: 0001-plugins.md  0003-context-management.md  0004-stateful-models.md  0005-state-machine.md  0006-cedar-authorization.md  0007-intervention-primitive.md  0008-proactive-context-compression.md  0009-context-offloader.md  0009-mono-repository.md  0010-multimodal-i2t-evaluation.md  0011-context-strategy.md  0011-memory-manager.md  README.md
dev-docs/: DEPENDENCIES.md  DIVERGENCES.md  PR.md  TESTING.md
docs/: DECISIONS.md  HOOKS.md  MCP_CLIENT_ARCHITECTURE.md  PR.md  README.md  STYLE_GUIDE.md  api  assets  community  contribute  examples  labs  user-guide
docs/community/: community-packages.mdx  get-featured.mdx
docs/examples/: README.mdx
docs/labs/: ai-functions.mdx  index.mdx
site/: .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CMS-TODO.md  CONTRIBUTING.md  SITE-ARCHITECTURE.md  astro.config.mjs  mkdocs.yml  package-lock.json  package.json  tsconfig.json  typedoc-tsconfig.json  typedoc.json  vitest.config.ts
site/docs/: .lycheeignore
site/overrides/: main.html
site/public/: robots.txt
site/scripts/: api-generation-python.py  api-generation-typescript.ts  astro-broken-links-checker-check-links.js  astro-broken-links-checker-index.js  clone-sdks.ts  update-known-routes.ts  update-language-index.ts  update-quickstart.ts
site/src/: content.config.ts  dynamic-sidebar.ts  env.d.ts  sidebar.ts
site/team/: API_BAR_RAISING.md  DECISIONS.md  FEATURE_LIFECYCLE.md  README.md
site/test/: api-link-converter.test.ts  blog.test.ts  content-collection.test.ts  dynamic-sidebar.test.ts  global-setup.ts  html-to-markdown.test.ts  known-routes.json  links.test.ts  redirect.test.ts  related-docs.test.ts  remark-mkdocs-snippets.test.ts  remark-reading-time.test.ts  route-middleware.test.ts  sidebar.test.ts  (+2 more)
site/test-snippets/: package.json  tsconfig.json
src/: content.config.ts  route-middleware.ts
strandly/: package.json  tsconfig.json
strands-py/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
strands-py-wasm/: README.md  pyproject.toml
strands-py-wasm/src/strands/: __init__.py  _generated.py  _marshalling.py  _runtime.py  types.py
strands-py-wasm/src/strands/_generated/: __init__.py
strands-py-wasm/src/strands/_generated/strands_agent/: api.py  conversation.py  edge_handler_registry.py  elicitation_handler.py  host_log.py  mcp.py  messages.py  model_provider.py  models.py  multi_agent.py  retry.py  sessions.py  snapshot_storage.py  snapshot_trigger_handler.py  streaming.py  tool_provider.py  tools.py  vended.py
strands-py-wasm/src/strands/_generated/wasi_clocks/: monotonic_clock.py  wall_clock.py
strands-py-wasm/src/strands/_generated/wasi_io/: __init__.py  error.py  poll.py  streams.py
strands-py-wasm/tests/: test_agent.py  test_tools.py
strands-ts/: AGENTS.md  README.md  eslint.config.js  package.json  tsconfig.base.json  vitest.config.ts
strands-wasm/: README.md  build.js  entry.ts  package.json  tsconfig.json  vitest.config.ts
team/: AGENT_GUIDELINES.md  API_BAR_RAISING.md  TENETS.md
test/: related-docs.test.ts
test-infra/: .gitignore  AGENTS.md  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
test_invalid_tool_names/: test_invalid_tool_names.py
tests/: conftest.py
tests-integ/: test_model_openai.py
tests_integ/: conftest.py  test_a2a_executor.py  test_agent_json.py  test_bedrock_cache_point.py  test_bedrock_guardrails.py  test_context_overflow.py  test_function_tools.py  test_interrupt.py  test_invalid_tool_names.py  test_mcp_client.py  test_multiagent_graph.py  test_multiagent_swarm.py  test_session.py  test_skills_plugin.py  test_stream_agent.py  test_structured_output_agent_loop.py  test_summarizing_conversation_manager_integration.py  test_tool_context_injection.py  test_tool_retry_hook.py
wit/: agent.wit  conversation.wit  logging.wit  mcp.wit  messages.wit  models.wit  multiagent.wit  retry.wit  sessions.wit  streaming.wit  tools.wit  vended.wit
(+1577 files in other folders)
