[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "strands-agents"
version = "2.0.0a1"
description = "A model-driven approach to building AI agents in just a few lines of code"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
license-files = ["LICENSE.APACHE", "LICENSE.MIT"]
authors = [
    {name = "AWS", email = "opensource@amazon.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Pinned to pgrayy/wasm-deps until upstream PRs land. Imports as `wasmtime`.
    "pgrayy-wasmtime @ git+https://github.com/pgrayy/wasm-deps.git@ed34d105ee3db091ef4bcf5aabacb1586e122e96#subdirectory=wasmtime-py",
]


[project.optional-dependencies]
pydantic = ["pydantic>=2.4.0,<3.0.0"]


[project.urls]
Homepage = "https://github.com/strands-agents/sdk-typescript"
"Bug Tracker" = "https://github.com/strands-agents/sdk-typescript/issues"
Documentation = "https://strandsagents.com"


[tool.hatch.metadata]
# pgrayy-wasmtime is pinned via a git URL until upstream PRs land.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/strands"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle the wasm into the wheel; _runtime.py finds it via package data.
"../strands-wasm/dist/strands-agent.wasm" = "strands/strands-agent.wasm"
