[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "strands-agents"
version = "2.0.0a1"
description = "A model-driven approach to building AI agents in just a few lines of code"
requires-python = ">=3.10"
license = "Apache-2.0 OR MIT"
license-files = ["LICENSE.APACHE", "LICENSE.MIT"]
authors = [
    {name = "AWS", email = "opensource@amazon.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Imports as `wasmtime`. Pinned to pgrayy/wasm-deps git URL until upstream PRs land.
    "pgrayy-wasmtime @ git+https://github.com/pgrayy/wasm-deps.git@4b5dc41512109ebafe4c4f1edd592c739872c640#subdirectory=wasmtime-py",
    "botocore>=1.29.0,<2.0.0",
]


[project.optional-dependencies]
pydantic = ["pydantic>=2.4.0,<3.0.0"]


[project.urls]
Homepage = "https://github.com/strands-agents/sdk-python"
"Bug Tracker" = "https://github.com/strands-agents/sdk-python/issues"
Documentation = "https://strandsagents.com"


[tool.hatch.metadata]
# pgrayy-wasmtime is pinned via a git URL until upstream PRs land.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/strands"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle the wasm into the wheel; _runtime.py finds it via package data.
"../strands-wasm/dist/strands-agent.wasm" = "strands/strands-agent.wasm"
